--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "botstrap": "^0.20.1",
     "core-js": "^3.6.5",
+    "sweetalert2": "^11.4.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.2"
